[gd_scene load_steps=4 format=3 uid="uid://de4fmxbcuthks"]

[ext_resource type="Script" uid="uid://bw48st8lupofn" path="res://scripts/ui.gd" id="1_dj8aq"]

[sub_resource type="LabelSettings" id="LabelSettings_ll0sn"]
font_size = 100

[sub_resource type="LabelSettings" id="LabelSettings_dj8aq"]
font_size = 150

[node name="UI" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dj8aq")

[node name="GameOver" type="Label" parent="."]
visible = false
layout_mode = 0
offset_right = 1152.0
offset_bottom = 637.0
text = "GAME OVER"
label_settings = SubResource("LabelSettings_ll0sn")
horizontal_alignment = 1
vertical_alignment = 1

[node name="PausePanel" type="Panel" parent="."]
process_mode = 3
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Pause" type="Label" parent="PausePanel"]
layout_mode = 0
offset_right = 1148.0
offset_bottom = 643.0
text = "PAUSED"
label_settings = SubResource("LabelSettings_dj8aq")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="PausePanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -95.0
offset_top = 95.0
offset_right = 105.0
offset_bottom = 145.0
grow_horizontal = 2
grow_vertical = 2
text = "Resume"

[connection signal="button_down" from="PausePanel/Button" to="." method="_on_button_button_down"]
[connection signal="button_up" from="PausePanel/Button" to="." method="_on_button_button_up"]
